# svclib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
svclib/: CMakeLists.txt
svclib/include/resource/: svclib.rc
svclib/include/svclib/: build_options.h  platform.h  service.h  service_manager.h  version.hpp
svclib/resource/: svclib.rc
svclib/src/: service.cpp  service_manager.cpp
svclibtest/: CMakeLists.txt  svclib_test_main.cpp
